# flic-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  creds.json
crates/flic-cli/: Cargo.toml
crates/flic-cli/src/: creds.rs  main.rs
crates/flic-core/: Cargo.toml
crates/flic-core/src/: constants.rs  error.rs  events.rs  hex.rs  lib.rs  manager.rs  reconnect.rs  session.rs  transport.rs
crates/flic-core/src/crypto/: chaskey.rs  ed25519.rs  kdf.rs  mod.rs  x25519.rs
crates/flic-core/src/protocol/: frame.rs  messages.rs  mod.rs
crates/flic-core/tests/: chaskey_vectors.rs  ed25519_vectors.rs  kdf_vectors.rs
crates/flic-core/tests/common/: mod.rs
crates/flic-core/tests/fixtures/: chaskey_mac_16.ndjson  chaskey_mac_dir_counter.ndjson  chaskey_subkeys.ndjson  ed25519_variant.ndjson  kdf.ndjson
crates/flic-napi/: .gitignore  Cargo.toml  hardware-smoke.mjs  package.json  smoke.mjs
crates/flic-napi/src/: lib.rs
fixtures/: README.md  generate.py  requirements.txt
