[workspace]
resolver = "2"
members = ["crates/flic-core", "crates/flic-cli", "crates/flic-napi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlm0/flic-rs"
authors = ["Jordy McNab <jordymcnab@gmail.com>"]

[workspace.dependencies]
btleplug = "0.11"
uuid = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-util = "0.7"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
