[package]
name = "flic-core"
description = "Pure-Rust Flic 2 BLE protocol implementation (scan, pair, reconnect, event decoding)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["flic", "ble", "bluetooth", "iot"]
categories = ["hardware-support", "embedded"]

[lib]
name = "flic_core"
path = "src/lib.rs"

[dependencies]
btleplug = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dependencies.hex]
version = "0.4"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
replay = []
